# fucking-black-scholes

./: DOCS.md  Dockerfile  LICENSE.md  README.md  README_ES.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
fbs/: helpers.py
src/fbs/: helpers.py  main.py
tests/: test_helpers.py
