[metadata]
name = fucking-black-scholes
version = 0.0.2
author = Dennis Concepcion Martin
author_email = dennisconcepcionmartin@gmail.com
description = A simple command line tool for pricing options using the Black-Scholes model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/denniscm190/fucking-black-scholes
project_urls = Bug Tracker = https://github.com/denniscm190/fucking-black-scholes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy~=1.21.4
    scipy~=1.7.2
    click~=8.0.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts = fbs = fbs.main:cli